--- a/landing page/assignments:projects/portfolio/typeofwork.html
+++ b/landing page/assignments:projects/portfolio/typeofwork.html
@@ -2,8 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title> Natasha Mandi</title>
-    <!-- <link rel="stylesheet" href="/css/master.css"> -->
+    <title></title>
   </head>
   <body>
 
