--- a/landing page/assignments:projects/portfolio/index.html
+++ b/landing page/assignments:projects/portfolio/index.html
@@ -6,6 +6,6 @@
     <!-- <link rel="stylesheet" href="/css/master.css"> -->
   </head>
   <body>
-
+    <p>this is the homepage for my portfolio</p>
   </body>
 </html>
