--- a/landing page/assignments:projects/portfolio/index.html
+++ b/landing page/assignments:projects/portfolio/index.html
@@ -3,9 +3,34 @@
   <head>
     <meta charset="utf-8">
     <title> Natasha Mandi</title>
-    <!-- <link rel="stylesheet" href="/css/master.css"> -->
+    -- <link rel="stylesheet" href="main.css"> -->
+    <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
+    <style media="screen">
+    body {
+      font-family: 'Mansalva', cursive;
+    }
+    </style>
   </head>
   <body>
+    <h1>natasha mandi</h1>
     <p>this is the homepage for my portfolio</p>
+    <a href="2dwork.html">
+    <p>page with all 2D work previews</p>
+    </a>
+    <a href="3dwork.html">
+      <p>page with all 3D work previews</p>
+    </a>
+    <a href="animation.html">
+      <p>page with all animation previews</p>
+    </a>
+    <a href="graphicdesign.html">
+      <p>page with all graphic design previews</p>
+    </a>
+    <a href="other.html">
+      <p>page with all other work previews</p>
+    </a>
+    <a href="about.html">
+      <p>about me!</p>
+    </a>
   </body>
 </html>
