--- a/landing page/assignments:projects/portfolio/index.html
+++ b/landing page/assignments:projects/portfolio/index.html
@@ -3,34 +3,26 @@
   <head>
     <meta charset="utf-8">
     <title> Natasha Mandi</title>
-    -- <link rel="stylesheet" href="main.css"> -->
-    <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="main.css">
     <style media="screen">
     body {
-      font-family: 'Mansalva', cursive;
+      font-family: 'Avenir';
+      /* background: url("bluegreen.gif") no-repeat center center fixed; */
+      /* background: img("homepageimage.png") center center; */
+      background-size: auto;
+      background-position: absolute;
     }
     </style>
-  </head>
-  <body>
-    <h1>natasha mandi</h1>
-    <p>this is the homepage for my portfolio</p>
-    <a href="2dwork.html">
-    <p>page with all 2D work previews</p>
-    </a>
-    <a href="3dwork.html">
-      <p>page with all 3D work previews</p>
-    </a>
-    <a href="animation.html">
-      <p>page with all animation previews</p>
-    </a>
-    <a href="graphicdesign.html">
-      <p>page with all graphic design previews</p>
-    </a>
-    <a href="other.html">
-      <p>page with all other work previews</p>
-    </a>
-    <a href="about.html">
-      <p>about me!</p>
-    </a>
-  </body>
+    <body>
+      <img class="homepage" src="homepageimage.png" alt="">
+      <img class="twod" src="labels/2dwork.png" alt="">
+      <img class="threed" src="labels/3dwork.png" alt="">
+      <img class="animation" src="labels/animation.png" alt="">
+      <img class="graphicdesign" src="labels/graphicdesign.png" alt="">
+      <img class="otherwork" src="labels/otherwork.png" alt="">
+      <img class="about" src="labels/about.png" alt="">
+
+      <div class="twodlink">  </div>
+
+    </body>
 </html>
