--- a/landing page/assignments:projects/portfolio/index.html
+++ b/landing page/assignments:projects/portfolio/index.html
@@ -22,7 +22,14 @@
       <img class="otherwork" src="labels/otherwork.png" alt="">
       <img class="about" src="labels/about.png" alt="">
 
-      <div class="twodlink">  </div>
+      <div class="twodlink"> </div>
+      <div class="threedlink"> </div>
+      <div class="animationlink"> </div>
+      <div class="graphicdesignlink"> </div>
+      <div class="otherworklink"> </div>
+      <div class="aboutlink"> </div>
+
+
 
     </body>
 </html>
