--- a/landing page/assignments:projects/portfolio/2dwork.html
+++ b/landing page/assignments:projects/portfolio/2dwork.html
@@ -2,9 +2,45 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title> 2D Work</title>
+      <link rel="stylesheet" href="main.css">
+      <style media="screen">
+        body{
+
+        }
+      </style>
   </head>
   <body>
-    <p>this is the page for the type of work</p>
+    <div class="background">
+      <img src="2D Work/NightAndDay.png" alt="">
+      <div class="caption">
+        <p>this is the caption</p>
+      </div>
+      <img src="2D Work/Zine_AlienDesigns.png" alt="">
+      <div class="caption">
+        <p>this is the caption</p>
+      </div>
+      <img src="2D Work/WomenInSTEM_MediaImage.jpeg" alt="">
+      <div class="caption">
+        <p>this is the caption</p>
+      </div>
+      <img src="2D Work/Aleitria_Character_Design.png" alt="">
+      <div class="caption">
+        <p>this is the caption</p>
+      </div>
+      <img src="2D Work/SelfPortraitThroughStillLife.jpeg" alt="">
+      <div class="caption">
+        <p>this is the caption</p>
+      </div>
+
+
+
+
+
+    </div>
+
+
+
+
   </body>
 </html>
