--- a/landing page/assignments:projects/portfolio/index.html
+++ b/landing page/assignments:projects/portfolio/index.html
@@ -6,13 +6,13 @@
       <link rel="stylesheet" href="main.css">
     <style media="screen">
     body {
-      font-family: 'Avenir';
       /* background: url("bluegreen.gif") no-repeat center center fixed; */
       /* background: img("homepageimage.png") center center; */
       background-size: auto;
       background-position: absolute;
     }
     </style>
+  </head>
     <body>
       <img class="homepage" src="homepageimage.png" alt="">
       <img class="twod" src="labels/2dwork.png" alt="">
@@ -22,12 +22,41 @@
       <img class="otherwork" src="labels/otherwork.png" alt="">
       <img class="about" src="labels/about.png" alt="">
 
-      <div class="twodlink"> </div>
-      <div class="threedlink"> </div>
-      <div class="animationlink"> </div>
-      <div class="graphicdesignlink"> </div>
-      <div class="otherworklink"> </div>
-      <div class="aboutlink"> </div>
+      <div class="twodlink">
+        <a href="2dwork.html">
+        2D work
+        </a>
+      </div>
+
+      <div class="threedlink">
+        <a href="3dwork.html">
+        3D work
+        </a>
+      </div>
+
+      <div class="animationlink">
+        <a href="animation.html">
+        Animation
+        </a>
+      </div>
+
+      <div class="graphicdesignlink">
+      <a href="graphicdesign.html">
+      Graphic Design
+      </a>
+      </div>
+
+      <div class="otherworklink">
+        <a href="otherwork.html">
+        Other Work
+        </a>
+      </div>
+
+      <div class="aboutlink">
+        <a href="about.html">
+        About
+        </a>
+      </div>
 
 
 
