--- a/landing page/assignments:projects/portfolio/2dwork.html
+++ b/landing page/assignments:projects/portfolio/2dwork.html
@@ -13,29 +13,25 @@
   <body>
     <div class="background">
       <img src="2D Work/NightAndDay.png" alt="">
-      <div class="caption">
+      <div class="captiontwod">
         <p>this is the caption</p>
       </div>
       <img src="2D Work/Zine_AlienDesigns.png" alt="">
-      <div class="caption">
+      <div class="captiontwod">
         <p>this is the caption</p>
       </div>
       <img src="2D Work/WomenInSTEM_MediaImage.jpeg" alt="">
-      <div class="caption">
+      <div class="captiontwod">
         <p>this is the caption</p>
       </div>
       <img src="2D Work/Aleitria_Character_Design.png" alt="">
-      <div class="caption">
+      <div class="captiontwod">
         <p>this is the caption</p>
       </div>
       <img src="2D Work/SelfPortraitThroughStillLife.jpeg" alt="">
-      <div class="caption">
+      <div class="captiontwod">
         <p>this is the caption</p>
       </div>
-
-
-
-
 
     </div>
 
