--- a/landing page/assignments:projects/portfolio/3dwork.html
+++ b/landing page/assignments:projects/portfolio/3dwork.html
@@ -2,9 +2,21 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title> 3D Work</title>
+      <link rel="stylesheet" href="main.css">
+      <style media="screen">
+        body{
+
+        }
+      </style>
   </head>
   <body>
-    <p>this is the page for the type of work</p>
+    <p>This page will contain a link to my sketchfab profile, which will have
+    all my 3D models and animations uploaded there!</p>
+
+
+
+
+
   </body>
 </html>
