--- a/landing page/assignments:projects/portfolio/index.html
+++ b/landing page/assignments:projects/portfolio/index.html
@@ -6,14 +6,14 @@
       <link rel="stylesheet" href="main.css">
     <style media="screen">
     body {
-      /* background: url("bluegreen.gif") no-repeat center center fixed; */
-      /* background: img("homepageimage.png") center center; */
-      background-size: auto;
+      background: url("bluegreen.gif") no-repeat center center fixed;
+      background-size: cover;
       background-position: absolute;
     }
     </style>
   </head>
     <body>
+      <div class="black"></div>
       <img class="homepage" src="homepageimage.png" alt="">
       <img class="twod" src="labels/2dwork.png" alt="">
       <img class="threed" src="labels/3dwork.png" alt="">
