--- a/landing page/assignments:projects/portfolio/2dwork.html
+++ b/landing page/assignments:projects/portfolio/2dwork.html
@@ -11,26 +11,31 @@
       </style>
   </head>
   <body>
+
+    <div class="heading">
+      <img src="2D Work/2dheading.png" alt="">
+    </div>
+
     <div class="background">
       <img src="2D Work/NightAndDay.png" alt="">
       <div class="captiontwod">
-        <p>this is the caption</p>
+        <p> Night and Day</p>
       </div>
       <img src="2D Work/Zine_AlienDesigns.png" alt="">
       <div class="captiontwod">
-        <p>this is the caption</p>
+        <p>Aliens</p>
       </div>
       <img src="2D Work/WomenInSTEM_MediaImage.jpeg" alt="">
       <div class="captiontwod">
-        <p>this is the caption</p>
+        <p>Women in STEM</p>
       </div>
       <img src="2D Work/Aleitria_Character_Design.png" alt="">
       <div class="captiontwod">
-        <p>this is the caption</p>
+        <p>Aleitria</p>
       </div>
       <img src="2D Work/SelfPortraitThroughStillLife.jpeg" alt="">
       <div class="captiontwod">
-        <p>this is the caption</p>
+        <p>Self Portrait through Still Life</p>
       </div>
 
     </div>
