--- a/landing page/assignments:projects/portfolio/3dwork.html
+++ b/landing page/assignments:projects/portfolio/3dwork.html
@@ -11,12 +11,28 @@
       </style>
   </head>
   <body>
+    <img src="3D Work/3dheading.png" alt="">
     <p>This page will contain a link to my sketchfab profile, which will have
-    all my 3D models and animations uploaded there!</p>
-
-
-
-
+    all my 3D models and animations uploaded there! For now, here are some sample
+    screenshots of a few models</p>
+    <div class="background">
+    <img src="3D Work/Planet_Render1.png" alt="">
+    <div class="captionthreed">
+      <p>Planet</p>
+    </div>
+    <img src="3D Work/Planet_Render2.png" alt="">
+    <div class="captionthreed">
+      <p>Planet closeup</p>
+    </div>
+    <img src="3D Work/Peacocktopus_2.png" alt="">
+    <div class="captionthreed">
+      <p>Peacocktopus</p>
+    </div>
+    <img src="3D Work/ReflectionsOnFemininity.png" alt="">
+    <div class="captionthreed">
+      <p>Reflections</p>
+    </div>
+    </div>
 
   </body>
 </html>
