--- a/landing page/assignments:projects/portfolio/index.html
+++ b/landing page/assignments:projects/portfolio/index.html
@@ -6,14 +6,13 @@
       <link rel="stylesheet" href="main.css">
     <style media="screen">
     body {
-      background: url("bluegreen.gif") no-repeat center center fixed;
-      background-size: cover;
+      /* background: url("bluegreen.gif") no-repeat center center fixed;*/
+      background-size: auto;
       background-position: absolute;
     }
     </style>
   </head>
     <body>
-      <div class="black"></div>
       <img class="homepage" src="homepageimage.png" alt="">
       <img class="twod" src="labels/2dwork.png" alt="">
       <img class="threed" src="labels/3dwork.png" alt="">
@@ -24,13 +23,13 @@
 
       <div class="twodlink">
         <a href="2dwork.html">
-        2D work
+        2D___Work
         </a>
       </div>
 
       <div class="threedlink">
         <a href="3dwork.html">
-        3D work
+        3D Work
         </a>
       </div>
 
