first draft finished

--- a/landing page/assignments:projects/portfolio/about.html
+++ b/landing page/assignments:projects/portfolio/about.html
@@ -2,9 +2,17 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title> Animation </title>
+      <link rel="stylesheet" href="main.css">
+      <style media="screen">
+        body{
+
+        }
+      </style>
   </head>
   <body>
-    <p>this is the about me page</p>
+    <img src="aboutheading.png" alt="">
+    <p>Learn about me here!</p>
+
   </body>
 </html>
