--- a/landing page/assignments:projects/portfolio/animation.html
+++ b/landing page/assignments:projects/portfolio/animation.html
@@ -2,9 +2,38 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title> Animation </title>
+      <link rel="stylesheet" href="main.css">
+      <style media="screen">
+        body{
+
+        }
+      </style>
   </head>
   <body>
-    <p>this is the page for the type of work</p>
+
+    <div class="heading">
+        <img src="Animation/animationheading.png" alt="">
+    </div>
+
+    <div class="background">
+    <img src="Animation/Elemental_WalkCycle.gif" alt="">
+    <div class="captionthreed">
+      <p>Elemental Walk Cycle</p>
+    </div>
+    <img src="Animation/Elemental.mp4" alt="">
+    <div class="captionthreed">
+      <p>Elemental</p>
+    </div>
+    <img src="Animation/the_ball_is_the_patriarchy.gif" alt="">
+    <div class="captionthreed">
+      <p>The Ball is the Patriarchy</p>
+    </div>
+    <img src="Animation/Zmurg_LipSync.mp4" alt="">
+    <div class="captionthreed">
+      <p>No Swimming?!</p>
+    </div>
+    </div>
+
   </body>
 </html>
