--- a/landing page/assignments:projects/portfolio/otherwork.html
+++ b/landing page/assignments:projects/portfolio/otherwork.html
@@ -2,9 +2,38 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title> Other Work </title>
+      <link rel="stylesheet" href="main.css">
+      <style media="screen">
+        body{
+
+        }
+      </style>
   </head>
   <body>
-    other Work
+
+    <div class="heading">
+        <img src="Other Work/otherworkheading.png" alt="">
+    </div>
+
+    <div class="background">
+    <img src="Other Work/Spaceship.mov" alt="">
+    <div class="captionotherwork">
+      <p>Spaceship</p>
+    </div>
+    <img src="Other Work/DancingBird.mov" alt="">
+    <div class="captionotherwork">
+      <p>Birdee</p>
+    </div>
+    <img src="Other Work/OtterButton.mov" alt="">
+    <div class="captionotherwork">
+      <p>Otter Button</p>
+    </div>
+    <img src="Other Work/AbstractExpressionism_CodeMimic.mov" alt="">
+    <div class="captionotherwork">
+      <p>Abstract Expressionism in Processing!</p>
+    </div>
+    </div>
+
   </body>
 </html>
