--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -12,7 +12,15 @@
   </head>
   <body>
     <img src="aboutheading.png" alt="">
-    <p>Learn about me here!</p>
+    <div class="captionabout">
+    <p>I am a media artist, animator, and student at the University of Southern California.
+         I am currently a sophomore majoring in Media Arts + Practice,
+         and minoring in 3D Animation. (will add more later)</p>
+
+    <h3> contact me at nmandi@gmail.com</h3>
+    <h3>(links to other accounts like sketchfab and youtube)</h3>
+    </div>
+
 
   </body>
 </html>
