--- a/projects.html
+++ b/projects.html
@@ -8,5 +8,8 @@
     <p>Projects</p>
     <a href="portfolio/index.html">
     <p>portfolio website</p></a>
+    <a href="nonlinearstory/nonlinearstory.html">
+      <p> non-linear narrative project</p>
+    </a>
   </body>
 </html>
