--- a/nonlinearstory/nonlinearstory.html
+++ b/nonlinearstory/nonlinearstory.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Project 2</title>
+    <title>Project 2 Part 1</title>
     <link rel="stylesheet" href="main.css">
   </head>
 
