--- a/weeklies.html
+++ b/weeklies.html
@@ -7,3 +7,12 @@
 
 <a href="weeklies/weekly3.html">
 <p>weekly 3</p></a>
+
+<a href="weeklies/weekly4.html">
+<p>weekly 4</p></a>
+
+<a href="weeklies/weekly5.html">
+<p>weekly 5</p></a>
+
+<a href="weeklies/weekly6.html">
+<p>weekly 6</p></a>
