--- a/weeklies/weekly5.html
+++ b/weeklies/weekly5.html
@@ -3,10 +3,9 @@
 <!DOCTYPE html>
 
 <center>
-  <body bgcolor =#eba0e7 > </body>
+  <body bgcolor = gray > </body>
   <h1>Weekly 5</h1>
   <h2>Natasha Mandi</h2>
 
-  <h3>insert image
-  </h3>
+<img src="weekly5.png" alt="">
 </center>
