as;dkfj;aksjdflkas

--- a/weeklies/weekly4.html
+++ b/weeklies/weekly4.html
@@ -6,6 +6,6 @@
   <h1>Weekly 4</h1>
   <h2>Natasha Mandi</h2>
 
-  <h3>insert text
+  <h3>The cultural impact of cybernetics and the idea that everything is working within a system is quite telling about the ways in which humans interact with each other and their societies. I see the logic in this video's argument about cybernetics within our societies, and the organizations, controls, and systems that run our lives and interactions. I think that it is both calming and terrifying to think of all humans as just participants in hundreds of different interconnected systems. However, I think its certainly true, at least to some extent. I think that the comparisons between cybernetics and nature/ecosystems was the most potent point of this video, as it made me feel that there is a natural order to this world, and that even though many people think of human beings as higher organisms that are more developed than other organisms due to our intelligence and social systems, we still fit into the modes of the world and of nature. There is a natural order within this chaos, and despite the seeming irregularity of everything, there are always systems at work and between people. Some people may find this somewhat scary, but I think its comforting. 
   </h3>
 </center>
