--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <title></title>
   </head>
   <body>
-    <p>Natasha Mandi</p>
-    <a href="projects.html">
-    <p>projects</p></a>
+    <p>natasha mandi</p>
     <a href="weeklies.html">
     <p>weeklies</p></a>
+    <a href="assignments.html">
+    <p>assignments</p></a>
+    <a href="projects.html">
+    <p>projects</p></a>
   </body>
 </html>
