--- a/projects.html
+++ b/projects.html
@@ -5,11 +5,13 @@
     <title></title>
   </head>
   <body>
-    <p>Projects</p>
+    <p>projects</p>
     <a href="portfolio/index.html">
       <p>portfolio website</p></a>
     <a href="nonlinearstory/nonlinearstory.html">
       <p> non-linear narrative project</p>
+    <a href="https://krisiml300.000webhostapp.com/project%203/index.html">
+        <p>final project</p></a>
     </a>
   </body>
 </html>
