stylize landing page

--- a/assignments.html
+++ b/assignments.html
@@ -2,10 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>assignments</title>
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <p>assignments</p>
+    <h1>assignments</h1>
     <a href="fanpage/fanpage.html">
       <p>fanpage</p></a>
     <a href="nonlinearstory/nonlinearstory.html">
