--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>index</title>
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <p>natasha mandi</p>
+    <h1>natasha mandi</h1>
+    <h1>iml 300</h1>
     <a href="weeklies.html">
     <p>weeklies</p></a>
     <a href="assignments.html">
