--- a/projects.html
+++ b/projects.html
@@ -2,13 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>projects</title>
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <p>projects</p>
+    <h1>projects</h1>
     <a href="portfolio/index.html">
       <p>portfolio website</p></a>
-    <a href="nonlinearstory/nonlinearstory.html">
+    <a href="https://krisiml300.000webhostapp.com/project2/start.html">
       <p> non-linear narrative project</p>
     <a href="https://krisiml300.000webhostapp.com/project%203/index.html">
         <p>final project</p></a>
