--- a/weeklies.html
+++ b/weeklies.html
@@ -1,4 +1,8 @@
-<p>weeklies</p>
+<!DOCTYPE html>
+  <title>weeklies</title>
+  <link rel="stylesheet" href="main.css">
+
+<h1>weeklies</h1>
   <a href="weeklies/weekly1.html">
   <p>weekly 1</p></a>
 
